--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">ConfiguratorAppKotlin</string>
+    <string name="app_name">Configurator App</string>
+    <string name="turn_on_environment">Turn on Environment</string>
 </resources>
